[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.11.0"
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
filetime = "0.2.25"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = ["sqlite", "macros", "chrono", "runtime-tokio"] }
tokio = { version = "1.46.0", features = ["full", "tracing"] }
tracing = "0.1.41"
ureq = "2.9.7"
